--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@multiversx/sdk-core": "^13.5.0",
+    "@multiversx/sdk-dapp": "^2.40.0",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.44",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
+    "tailwindcss": "^3.4.10",
+    "vite-plugin-node-polyfills": "^0.22.0",
+    "wrappers": "^0.2.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
