--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "autoprefixer": "^10.4.20",
     "formik": "^2.4.6",
+    "lucide-react": "^0.439.0",
     "postcss": "^8.4.44",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
